[package]
name = "metronome"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
embedded-hal = "0.2.4"
cortex-m-rt = "0.7"
microbit-v2 = "0.13.0"
libm = "0.2.7"

rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
